--- a/Classes/index.html
+++ b/Classes/index.html
@@ -1051,7 +1051,7 @@ int main(int argc, char **argv)
 </pre></td></table></center><p>
 
 To debug this, you'll note that I have <b>printf()</b> statement that I have commented out.
-Those let me look at the <b>Board_String<b/> strings to make sure that everything looks good.
+Those let me look at the <b>Board_String</b> strings to make sure that everything looks good.
 Let's call it on 1,000,000 games:
 
 <pre>
