Pointer lecture notes.

--- a/Hashing/files/teaching_notes.html
+++ b/Hashing/files/teaching_notes.html
@@ -77,3 +77,10 @@ UNIX> ( cat files/Pictures-MD5.txt ; \
 ?    echo F 6143a5ddcf738eda4a9ad1d54d3fcc07 ) | \
 ?    bin/hash_tester 834 Last7 Linear
 
+
+------------------------------------------------------------
+
+End class by going over some exam questions:
+
+2013 CS140 Midterm, Question 1.
+2014 CS140 Midterm, Question 1.
